# spotify-playing-to-file

./: Cargo.toml  LICENSE  README.md
src/: main.rs
