[package]
name = "spotify-playing-to-file"
version = "0.1.0"
authors = ["Luke Strickland <luke@axxim.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
osascript = "0.3.0"
serde = "1.0.119"
serde_derive = "1.0.119"
serde_json = "1.0.61"
